--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
                 <label for="method">Methods</label>
                 <select id="method" name="method" required>
                     <option value="gojo">Gojo</option>
+                    <option value="flood">Flood</option>
+                    <option value="tls">TLS</option>
+                    <option value="strike">Strike</option>
+                    <option value="spike">Spike</option>
                 </select>
             </div>
 
